# AI-Powered-Quantitative-Research-Platform

./: .bandit  .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .secrets.baseline  .semgrep.yml  ADVANCED_RL_INTEGRATION_ANALYSIS.md  AI_ASSISTANT_QUICK_GUIDE.md  ARCHITECTURE.md  AUDIT_MISSING_TARGET_ROWS.md  AUDIT_PPO_SUMMARY.md  AUDIT_REPORT.md  AUDIT_SUMMARY.md  BUG_09_QUICK_REFERENCE.md  BUG_FIXES_REPORT_2025_11_22.md  BUG_REPORT.md  BUILD_INSTRUCTIONS.md  BUILD_SYSTEM_SUMMARY.md  CATEGORICAL_VF_CLIPPING_FIX.md  CATEGORICAL_VF_CLIPPING_VERIFICATION.md  CHANGELOG.md  CHANGELOG_VGS_VERIFICATION.md  CHANGES_SUMMARY.md  CLEANUP_INSTRUCTIONS.md  CLOSE_ORIG_SEMANTIC_FIX_REPORT_2025_11_25.md  COMPREHENSIVE_DDOF_FIX.md  COMPREHENSIVE_TEST_COVERAGE_REPORT.md  COMPREHENSIVE_TEST_VALIDATION_REPORT.md  COMPREHENSIVE_TRAIN_LOOP_MATH_AUDIT.md  COMPREHENSIVE_UPDATE_CHECKLIST.md  CONCEPTUAL_ANALYSIS_REPORT_2025_11_24.md  CONCEPTUAL_BUGS_VERIFICATION_REPORT_2025_11_24.md  CONSOLIDATION_SUMMARY.md  CONTRIBUTING.md  CRITICAL_BUGS_ANALYSIS_2025_11_23.md  CRITICAL_BUGS_TESTING_REPORT_2025_11_23.md  CRITICAL_BUGS_VERIFICATION_REPORT.md  CRITICAL_CROSS_SYMBOL_DATA_LEAKAGE.md  CRITICAL_FIXES_5_REPORT.md  (+352 more)
.claude/: settings.local.json
adapters/: __init__.py  base.py  config.py  models.py  registry.py  websocket_base.py
adversarial/: README.md  __init__.py  pbt_scheduler.py  sa_ppo.py  state_perturbation.py
audits/: value_head_output.md
benchmarks/: __init__.py  bench_full_sim.py  bench_futures_simulation.py  bench_matching.py  bench_options_greeks.py  bench_options_memory.py
configs/: asset_class_defaults.yaml  config_backtest_forex.yaml  config_backtest_stocks.yaml  config_futures_unified.yaml  config_live_alpaca.yaml  config_live_futures.yaml  config_pbt_adversarial.yaml  config_sim.yaml  config_template.yaml  config_train.yaml  config_train_forex.yaml  config_train_futures.yaml  config_train_signal_only_demo.yaml  config_train_signal_only_stocks.yaml  config_train_spot_bar.yaml  config_train_stocks.yaml  conformal.yaml  exchange.yaml  execution_l3.yaml  feature_flags_futures.yaml  forex_defaults.yaml  legacy_sim.yaml  no_trade.yaml  runtime.yaml  slippage.yaml  unified_futures_risk.yaml
debug_archive/: README.md  debug_vgs_detailed.py  debug_vgs_error.py  debug_vgs_param_mystery.py  debug_vgs_source.py
docs/: ACTION_SPACE_CRITICAL_GUIDE.md  ADVANTAGE_NORMALIZATION_FIX.md  ADVANTAGE_NORMALIZATION_VALIDATION_REPORT.md  ADVANTAGE_STD_FLOOR_FIX.md  AI_GUIDE.md  BEACHHEAD_MARKET_STRATEGY.md  BUSINESS_PLAN_EU_VISA.md  CATEGORICAL_VF_CLIPPING_FIX.md  CYBERSECURITY_FRAMEWORK.md  DATA_PROTECTION_POLICY.md  ENCODING_FIX_REPORT.md  ENTERPRISE_ADOPTION_RISK_MITIGATION.md  ENTERPRISE_DEPLOYMENT_ARCHITECTURE.md  ENTERPRISE_TECHNICAL_IMPLEMENTATION.md  FINAL_VALIDATION_SUMMARY.md  FOREX_INTEGRATION_PLAN.md  FOREX_INTEGRATION_QUICK_REF.md  FUTURES_INTEGRATION_PLAN.md  GETTING_STARTED.md  GRADIENT_FLOW_FIX_CATEGORICAL_PROJECTION.md  INNOVATION_STATEMENT.md  INVESTOR_BRIEF.md  L3_MIGRATION_GUIDE.md  L3_VALIDATION_REPORT.md  LEAN_VALIDATION_STRATEGY.md  MVP_FOCUS.md  OPERATIONS_RUNBOOK.md  OPTIONS_INTEGRATION_PLAN.md  PBT_OPTIMIZER_STATE.md  PILOT_PROGRAM.md  PPO_VF_CLIPPING_FIX.md  PRODUCT_OVERVIEW.md  RECOVERY_PROCEDURES.md  REGULATORY_COMPLIANCE_STRATEGY.md  SERVICE_DEPENDENCY_MAP.md  SOC2_ROADMAP.md  STD_DDOF_CORRECTION.md  STOCK_TRADING_GUIDE.md  UPGD_INTEGRATION.md  VF_CLIPPING_FIX_VERIFICATION.md  (+16 more)
issues/: BUG_09_VGS_PARAMETER_TRACKING_RESOLVED.md
lob/: __init__.py  calibration.py  calibration_pipeline.py  cme_matching.py  config.py  dark_pool.py  data_adapters.py  data_structures.py  event_coordinator.py  event_scheduler.py  fill_probability.py  forex_tick_simulation.py  futures_extensions.py  hidden_liquidity.py  impact_calibration.py  impact_effects.py  latency_model.py  lazy_multi_series.py  market_impact.py  matching_engine.py  order_manager.py  parsers.py  queue_tracker.py  queue_value.py  ring_buffer_orderbook.py  state_manager.py  us_market_structure.py
optimizers/: README.md  __init__.py  adaptive_upgd.py  upgd.py  upgdw.py
scripts/: calibrate_dynamic_spread.py  calibrate_l3.py  check_documentation_health.py  doctor.py  download_economic_calendar.py  download_forex_data.py  download_funding_history.py  download_interest_rates.py  download_stock_data.py  download_swap_rates.py  fetch_alpaca_universe.py  fetch_leverage_brackets.py  prepare_training_data.py  quickstart.py  reorganize_docs.py
services/: cme_calendar.py  cme_risk_guards.py  corporate_actions.py  earnings_calendar.py  event_bus.py  forex_config.py  forex_dealer.py  forex_execution_integration.py  forex_position_sync.py  forex_realtime_swaps.py  forex_requote.py  forex_risk_guards.py  forex_session_router.py  futures_feature_flags.py  futures_funding_tracker.py  futures_live_runner.py  futures_margin_monitor.py  futures_position_sync.py  futures_risk_guards.py  healthcheck.py  macro_data.py  ops_kill_switch.py  pdt_guard.py  pdt_tracker.py  portfolio_constraints.py  position_sync.py  runtime_security.py  sector_momentum.py  secure_logging.py  session_router.py  stock_risk_guards.py  survivorship.py  trading_halts.py  unified_futures_risk.py  universe_stocks.py
tests/: COMPREHENSIVE_TEST_REPORT.md  README_AWR_TESTS.md  README_QUANTILE_LEVELS.md  README_ratio_clamping.md  TEST_EXECUTION_SUMMARY.md  conftest.py  conftest_forex.py  test_4h_migration_fixes.py  test_51_features.py  test_actual_ppo_vf_clipping_integration.py  test_adapters_base.py  test_adapters_config_validation.py  test_adaptive_upgd_noise.py  test_advantage_normalization_deep.py  test_advantage_normalization_epsilon_fix.py  test_advantage_normalization_group_level.py  test_advantage_normalization_integration.py  test_advantage_normalization_simple.py  test_advantage_std_floor_deep_analysis.py  test_advantage_std_floor_deep_analysis_v2.py  test_advantage_std_floor_experiment.py  test_advantage_std_floor_fix.py  test_advantage_std_floor_fix_v2.py  test_ai_act_accuracy_metrics.py  test_ai_act_explainability.py  test_ai_act_robustness.py  (+349 more)
(+435 files in other folders)
