# ============================================================================
# AI-Powered Quantitative Research Platform
# ============================================================================
# Production-grade dependency management with version pinning
# Reference: https://packaging.python.org/en/latest/specifications/pyproject-toml/
#
# Installation variants:
#   pip install -e .                     # Core dependencies only
#   pip install -e ".[cpu]"              # PyTorch CPU-only
#   pip install -e ".[gpu]"              # PyTorch with CUDA 12.1
#   pip install -e ".[dev]"              # Development dependencies
#   pip install -e ".[full]"             # Everything
#
# Lock files:
#   pip install -r requirements-cpu.lock.txt   # Reproducible CPU build
#   pip install -r requirements-gpu.lock.txt   # Reproducible GPU build
# ============================================================================

[build-system]
requires = [
    "setuptools>=69.0.0,<70.0.0",
    "wheel>=0.42.0,<1.0.0",
    "Cython>=3.0.10,<3.1.0",
    "numpy>=1.26.0,<2.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "ai-quant-platform"
version = "1.0.0"
description = "AI-Powered Quantitative Research Platform for algorithmic trading with reinforcement learning"
readme = "README.md"
license = {text = "Proprietary"}
authors = [{name = "TradingBot2 Team"}]
maintainers = [{name = "TradingBot2 Team"}]
keywords = ["trading", "reinforcement-learning", "quantitative-finance", "algorithmic-trading", "ppo"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Cython",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

# Python 3.12+ required for performance improvements and typing features
requires-python = ">=3.12,<3.13"

# ============================================================================
# Core Dependencies (platform-independent, no PyTorch)
# ============================================================================
# These are installed with: pip install -e .
# Note: PyTorch is in optional dependencies due to CPU/GPU variants
dependencies = [
    # ---- Data Processing ----
    "numpy>=1.26.0,<2.0.0",          # NumPy 2.0 has breaking changes, pin to 1.x
    "pandas>=2.1.0,<3.0.0",          # 2.1+ for pyarrow backend improvements
    "pyarrow>=14.0.0,<16.0.0",       # Parquet I/O, string dtype

    # ---- Configuration & Validation ----
    "pydantic>=2.5.0,<3.0.0",        # 2.x for improved performance, model_dump()
    "pyyaml>=6.0.1,<7.0.0",          # YAML config parsing

    # ---- Async & Networking ----
    "aiohttp>=3.9.0,<4.0.0",         # Async HTTP client
    "websockets>=12.0,<14.0",        # WebSocket connections
    "requests>=2.31.0,<3.0.0",       # Sync HTTP client
    "httpx>=0.26.0,<1.0.0",          # Modern HTTP client (async/sync)

    # ---- ML Optimization ----
    "optuna>=3.5.0,<4.0.0",          # Hyperparameter optimization
    "joblib>=1.3.0,<2.0.0",          # Parallel processing, model persistence

    # ---- Scientific Computing ----
    "scipy>=1.11.0,<2.0.0",          # Optimization, statistics
    "arch>=6.2.0,<8.0.0",            # GARCH volatility models

    # ---- Gym Environment ----
    "gymnasium>=0.29.0,<1.0.0",      # OpenAI Gym successor

    # ---- RL Framework (base) ----
    # Note: stable-baselines3 and sb3-contrib require torch
    # They are in optional dependencies with CPU/GPU PyTorch
]

[project.scripts]
no-trade-mask = "apply_no_trade_mask:main"

[project.urls]
Repository = "https://github.com/your-org/tradingbot2"
Documentation = "https://github.com/your-org/tradingbot2/docs"

# ============================================================================
# Optional Dependencies
# ============================================================================
[project.optional-dependencies]

# PyTorch CPU-only variant
# Install: pip install -e ".[cpu]"
cpu = [
    "torch>=2.1.0,<2.4.0",           # PyTorch CPU (pip default)
    "stable-baselines3>=2.2.0,<3.0.0",
    "sb3-contrib>=2.2.0,<3.0.0",     # RecurrentPPO
]

# PyTorch with CUDA 12.1 support (Linux/Windows only)
# Install: pip install -e ".[gpu]"
# Note: For CUDA 11.8, use: pip install torch --index-url https://download.pytorch.org/whl/cu118
gpu = [
    "torch>=2.1.0,<2.4.0",           # Will install CUDA version if available
    "stable-baselines3>=2.2.0,<3.0.0",
    "sb3-contrib>=2.2.0,<3.0.0",
]

# Reinforcement Learning dependencies (common to CPU/GPU)
rl = [
    "stable-baselines3>=2.2.0,<3.0.0",
    "sb3-contrib>=2.2.0,<3.0.0",
]

# Exchange adapters
exchanges = [
    "alpaca-py>=0.21.0,<1.0.0",      # Alpaca Markets
    "polygon-api-client>=1.13.0,<2.0.0",  # Polygon.io
    "ib_insync>=0.9.86,<1.0.0",      # Interactive Brokers (IB)
    # Note: Binance uses native REST/WS, no SDK needed
]

# Web API server
api = [
    "fastapi>=0.109.0,<1.0.0",
    "uvicorn[standard]>=0.27.0,<1.0.0",
]

# Visualization (optional)
viz = [
    "matplotlib>=3.8.0,<4.0.0",
    "seaborn>=0.13.0,<1.0.0",
    "plotly>=5.18.0,<6.0.0",
]

# Development dependencies
dev = [
    # Testing
    "pytest>=7.4.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "pytest-cov>=4.1.0,<6.0.0",
    "pytest-xdist>=3.5.0,<4.0.0",    # Parallel test execution
    "hypothesis>=6.92.0,<7.0.0",     # Property-based testing

    # Type checking
    "mypy>=1.8.0,<2.0.0",
    "types-PyYAML>=6.0.0,<7.0.0",
    "types-requests>=2.31.0,<3.0.0",
    "pandas-stubs>=2.1.0,<3.0.0",

    # Linting & formatting
    "ruff>=0.1.9,<1.0.0",            # Fast Python linter
    "black>=23.12.0,<25.0.0",
    "isort>=5.13.0,<6.0.0",
    "import-linter>=2.7.0,<3.0.0",

    # Pre-commit hooks
    "pre-commit>=3.6.0,<4.0.0",
    "detect-secrets>=1.5.0,<2.0.0",
]

# Documentation
docs = [
    "mkdocs>=1.5.0,<2.0.0",
    "mkdocs-material>=9.5.0,<10.0.0",
    "mkdocstrings[python]>=0.24.0,<1.0.0",
]

# Cython/C++ build dependencies (for development)
build = [
    "Cython>=3.0.10,<3.1.0",
    "numpy>=1.26.0,<2.0.0",
    "setuptools>=69.0.0,<70.0.0",
    "wheel>=0.42.0,<1.0.0",
]

# Full installation (CPU)
full-cpu = [
    "ai-quant-platform[cpu,exchanges,api,viz,dev]",
]

# Full installation (GPU)
full-gpu = [
    "ai-quant-platform[gpu,exchanges,api,viz,dev]",
]

# Alias for backwards compatibility
extra = [
    "pyarrow>=14.0.0,<16.0.0",
    "requests>=2.31.0,<3.0.0",
    "joblib>=1.3.0,<2.0.0",
    "fastapi>=0.109.0,<1.0.0",
    "uvicorn>=0.27.0,<1.0.0",
]

# ============================================================================
# Tool Configurations
# ============================================================================

[tool.setuptools]
packages = ["adapters", "adversarial", "lob", "optimizers", "services", "strategies", "wrappers", "scripts", "utils"]
py-modules = [
    "action_proto",
    "apply_no_trade_mask",
    "binance_public",
    "binance_ws",
    "calibration",
    "clock",
    "config",
    "core_config",
    "core_conformal",
    "core_constants",
    "core_contracts",
    "core_events",
    "core_models",
    "core_options",
    "core_strategy",
    "custom_policy_patch1",
    "data_loader_multi_asset",
    "data_validation",
    "distributional_ppo",
    "drift",
    "economic_calendar",
    "evaluate_policy_custom_cython",
    "execution_providers",
    "execution_providers_cme",
    "execution_providers_futures",
    "execution_providers_l3",
    "execution_sim",
    "feature_config",
    "feature_pipe",
    "features_pipeline",
    "fees",
    "forex_features",
    "impl_conformal",
    "impl_exercise_probability",
    "impl_fees",
    "impl_greeks_vectorized",
    "impl_iv_calculation",
    "impl_latency",
    "impl_offline_data",
    "impl_pricing",
    "impl_quantizer",
    "impl_slippage",
    "impl_span_margin",
    "leakguard",
    "mediator",
    "no_trade",
    "no_trade_config",
    "quantizer",
    "risk_guard",
    "runtime_flags",
    "script_backtest",
    "script_eval",
    "script_live",
    "service_backtest",
    "service_conformal",
    "service_eval",
    "service_signal_runner",
    "service_train",
    "slippage",
    "stock_features",
    "trading_patchnew",
    "train_model_multi_patch",
    "trainingtcost",
    "transformers",
    "utils_time",
    "variance_gradient_scaler",
]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json", "*.pyx", "*.pxd", "*.cpp", "*.h"]

# ============================================================================
# Pytest Configuration
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",  # Show extra test summary for all except passed
]
markers = [
    "asyncio: marks tests as async (using pytest-asyncio)",
    "ppo_bugs: marks tests for PPO bug fixes",
    "integration: marks tests as integration tests",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "requires_cython: marks tests that require compiled Cython modules",
    "requires_gpu: marks tests that require GPU",
    "phase1: forex regression phase 1 enum checks",
    "phase2: forex regression phase 2 adapter checks",
    "phase3: forex regression phase 3 slippage checks",
    "phase4: forex regression phase 4 feature checks",
    "phase5: forex regression phase 5 services checks",
    "phase6: forex regression phase 6 risk checks",
    "phase7: forex regression phase 7 data pipeline checks",
    "phase8: forex regression phase 8 config checks",
    "phase9: forex regression phase 9 training checks",
    "full: forex regression full-suite gate",
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:gymnasium.*:",
    "ignore::DeprecationWarning:stable_baselines3.*:",
]

# ============================================================================
# Black Configuration
# ============================================================================
[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | venv
    | build
    | dist
    | __pycache__
    | \.eggs
    | data
    | docs/archive
)/
'''

# ============================================================================
# Ruff Configuration (Fast Python Linter)
# ============================================================================
[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "venv",
    "build",
    "dist",
    "__pycache__",
    ".eggs",
    "data",
    "docs/archive",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.isort]
known-first-party = [
    "adapters",
    "adversarial",
    "lob",
    "optimizers",
    "services",
    "strategies",
    "wrappers",
]

# ============================================================================
# isort Configuration (for direct invocations)
# ============================================================================
[tool.isort]
profile = "black"
line_length = 100
known_first_party = [
    "adapters",
    "adversarial",
    "lob",
    "optimizers",
    "services",
    "strategies",
    "wrappers",
]

# ============================================================================
# MyPy Configuration
# ============================================================================
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "build/",
    "dist/",
    "venv/",
    ".venv/",
    "data/",
    "docs/archive/",
]

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "gymnasium.*",
    "stable_baselines3.*",
    "sb3_contrib.*",
    "optuna.*",
    "arch.*",
    "scipy.*",
    "alpaca.*",
    "polygon.*",
    "ib_insync.*",
]
ignore_missing_imports = true

# ============================================================================
# Coverage Configuration
# ============================================================================
[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "benchmarks/*",
    "tools/*",
    "scripts/*",
    "data/*",
    "docs/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
